Fix: Remove top offset from product showcase images to align from top

--- a/assets/vastu-sections.css
+++ b/assets/vastu-sections.css
@@ -3072,6 +3072,8 @@ xo-modal[xo-placement="center"]::before {
     width: 100%;
     padding-top: 0 !important;
     margin-top: 0 !important;
+    top: 0 !important;
+    position: relative !important;
     align-self: flex-start !important;
   }
   
